fix sort order and adjust spacing on news and images

--- a/app/[lang]/Home.scss
+++ b/app/[lang]/Home.scss
@@ -303,6 +303,7 @@
     @include breakpoint(1000px) {
       width: 350px;
       height: 350px;
+      object-fit: cover;
       // background-size: cover;
     }
   }
@@ -319,6 +320,7 @@
     @include breakpoint(1000px) {
       bottom: 0;
       font-size: 24px;
+      padding: 12px;
     }
   }
   &__button-div {
@@ -522,8 +524,8 @@
     }
   }
   &__image {
-    // width: 100px;
     min-height: 200px;
+    // object-fit: cover;
   }
 
   &__list-item {
