--- a/app/[lang]/news/[newsSlug]/ArticlePage.scss
+++ b/app/[lang]/news/[newsSlug]/ArticlePage.scss
@@ -14,7 +14,7 @@
     font-weight: 500;
     line-height: 120%; /* 43.2px */
     @include breakpoint(1000px) {
-      font-size: 64px;
+      font-size: 56px;
     }
   }
 
@@ -29,7 +29,7 @@
   &__content {
     padding: 72px 20px;
     @include breakpoint(1000px) {
-      padding: 144px 100px;
+      padding: 80px 100px 144px 100px; // Top, Right, Bottom, Left
     }
   }
   &__text {
@@ -45,7 +45,7 @@
     line-height: 150%; /* 27px */
     letter-spacing: 0.18px;
     @include breakpoint(1000px) {
-      margin-top: 106px;
+      margin-top: 64px;
       width: 75%;
     }
   }
@@ -61,10 +61,17 @@
     text-align: center;
     text-decoration: none;
   }
+  &__gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 36px;
+  }
   &__gallery-image {
     width: 100%;
     @include breakpoint(1000px) {
-      width: 30%;
+      width: 40%;
+      flex: 1;
     }
   }
 }
